--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </style>
 </head>
 <body>
-  <h1>ФотоПазл: Собери своё изображение!</h1>
+  <h1>ФотоПазл: Собери изображение!</h1>
   <div class="controls">
     <label style="display:flex;gap:8px;align-items:center">
       <span>Размер:</span>
@@ -57,6 +57,10 @@
         <option value="4">4 × 4</option>
         <option value="5">5 × 5</option>
         <option value="6">6 × 6</option>
+        <option value="7">7 × 7</option>
+        <option value="8">8 × 8</option>
+        <option value="9">9 × 9</option>
+        <option value="10">10 × 10</option>
       </select>
     </label>
     <button id="shuffleBtn">Перемешать</button>
